style: fix the footer layout on smaller screens

--- a/style.css
+++ b/style.css
@@ -164,7 +164,6 @@ input {
 }
 
 footer {
-    /* height: 6rem; */
     height: 13%;
     display: flex;
     flex-direction: column;
@@ -201,6 +200,10 @@ footer {
 .legal ul {
     display: flex;
     justify-content: end;
+}
+
+.links2{
+    display: none;
 }
 
 .legal {
@@ -310,8 +313,6 @@ input {
     display: none;
 }
 
-
-
 .language {
     font-size: x-small;
 }
@@ -325,24 +326,44 @@ footer {
     flex-direction: column;
     width: 100%;
     background-color: #f6f6f8;
-    
+    height: 20%;
+}
+
+.links {
+    display: none;
+}
+
+.links2{
+    flex: 1;
+    display: flex;
+    width: 100%;
+    padding: 1rem;
+}
+
+.links2 ul{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
 }
 
 .first {
-    padding: 0 1rem;
+    padding: .5rem 1rem ;
     font-size: 0.9rem;
     cursor: none;
+    
 }
 
 .second {
     flex-direction: column;
     padding: 0;
-    gap: .5rem;
+    gap: 0;
+    width: 100%;
     cursor: none;
+    
 }
 
 ul > li {
-    padding: 0 1rem;
+    /* padding: 0 1rem; */
     font-size: .9rem;
 }
 
